--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.7.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "shadcn-ui": "^0.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
