--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "erinvb-portfolio-2024",
   "version": "0.1.0",
+  "homepage": "https://erinvanbrunt.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -31,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon backend/server.js",
-    "dev": "concurrently \"npm run server\" \"sleep 5 && npm run start\""
+    "dev": "concurrently \"npm run server\" \"sleep 5 && npm run start\"",
+    "start:prod": "NODE_ENV=production node backend/server.js"
   },
   "eslintConfig": {
     "extends": [
