--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.4",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
-    "shadcn-ui": "^0.9.2",
+    "shadcn-ui": "^0.9.3",
+    "three": "^0.170.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
