weather is now found by entering country and city into terminal

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# Example environment variables - DO NOT ADD REAL SECRETS HERE
+# DO NOT ADD REAL SECRETS HERE
 REACT_APP_API_URL=http://localhost:5001
 MONGODB_URI=mongodb://localhost:27017/shop
 JWT_SECRET=your_jwt_secret_here
 NODE_ENV=development
 PORT=5001
+REACT_APP_OPENWEATHER_API_KEY=your_api_key_here
