--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,12 @@
   "name": "Project Videos Extension",
   "version": "1.0",
   "description": "Project videos display",
-  "web_accessible_resources": ["cast_sender.js", "*://*.vimeo.com/*"]
+  "web_accessible_resources": [
+    "cast_sender.js",
+    "*://*.vimeo.com/*",
+    "*://*.virtualearth.net/*",
+    "*://*.cesium.com/*",
+    "*://*.arcgisonline.com/*"
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-inline' 'unsafe-eval' player.vimeo.com *.vimeo.com *.virtualearth.net *.cesium.com *.arcgisonline.com; object-src 'self'; img-src 'self' data: blob: *.virtualearth.net *.cesium.com *.arcgisonline.com; connect-src 'self' *.cesium.com *.virtualearth.net *.arcgisonline.com"
 }
