--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "*://*.vimeo.com/*",
     "*://*.virtualearth.net/*",
     "*://*.cesium.com/*",
-    "*://*.arcgisonline.com/*"
+    "*://*.arcgisonline.com/*",
+    "*://*.openweathermap.org/*"
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-inline' 'unsafe-eval' player.vimeo.com *.vimeo.com *.virtualearth.net *.cesium.com *.arcgisonline.com; object-src 'self'; img-src 'self' data: blob: *.virtualearth.net *.cesium.com *.arcgisonline.com; connect-src 'self' *.cesium.com *.virtualearth.net *.arcgisonline.com"
+  "content_security_policy": "script-src 'self' 'unsafe-inline' 'unsafe-eval' player.vimeo.com *.vimeo.com *.virtualearth.net *.cesium.com *.arcgisonline.com; object-src 'self'; img-src 'self' data: blob: *.virtualearth.net *.cesium.com *.arcgisonline.com; connect-src 'self' *.cesium.com *.virtualearth.net *.arcgisonline.com *.openweathermap.org"
 }
