--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "https://erinvanbrunt.com",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/qna": "^1.0.2",
+    "@tensorflow/tfjs": "^4.22.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
